feat: handler重构, 对齐 coin/stock/fund 抽象架构（表头、排序、实例化 Bean 统一）, 为后续新增其他API准备 优化静态代码块逻辑 IDEA Deprecated API 更新